apollo-federation/tests/snapshots/main__composition__compose_type_merging__arguments_merges_nullable_and_non_nullable.snap
---
source: apollo-federation/tests/composition/compose_type_merging.rs
expression: print_sdl(api_schema.schema())
---
type Query {
  field(arg: String!): String
}