apollo-federation/tests/snapshots/main__composition__compose_type_merging__field_types_errors_on_incompatible_types.snap
---
source: apollo-federation/tests/composition/compose_type_merging.rs
expression: "format!(\"Composition errors:\\n{}\", error_strings.join(\"\\n\\n\"))"
---
Composition errors:
Type of field "T.f" is incompatible across subgraphs: it has type "String" in subgraph "subgraphA" but type "Int" in subgraph "subgraphB"