apollo-federation/tests/snapshots/main__composition__compose_type_merging__field_types_merges_nullable_and_non_nullable.snap
---
source: apollo-federation/tests/composition/compose_type_merging.rs
expression: print_sdl(api_schema.schema())
---
type Query {
  T: T!
}

type T {
  id: ID!
  f: String
}