apollo-federation/tests/snapshots/main__composition__compose_type_merging__field_types_merges_union_subtypes.snap
---
source: apollo-federation/tests/composition/compose_type_merging.rs
expression: print_sdl(api_schema.schema())
---
type A {
  a: Int
}

type B {
  b: Int
}

type Query {
  T: T!
}

type T {
  id: ID!
  f: U
}

union U = A | B